syntax = "proto3";
package zetachain.zetacore.crosschain;

option go_package = "github.com/zeta-chain/zetacore/x/crosschain/types";

message ZetaConversionRate {
  string index = 1; 
  string chain = 2; 
  repeated string signers = 3;
  repeated uint64 blockNums = 4;
  repeated string zetaConversionRates = 5; // uint64 is in fact bits representation of float64
  string nativeTokenSymbol = 6; 
  uint64 medianIndex = 7;
}

